# oreo-news

liboreo-news/: CMakeLists.txt  README.md  oreo-news-cli.cc  oreo-news-test.cc  oreo-news.cpp  oreo-news.hpp
liboreo-news/3rdpaty/pugixml/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
liboreo-news/http/: client.hpp  openssl.cpp  openssl.hpp
liboreo-news/sources/: compositor-test.cc  compositor.cpp  compositor.hpp  news-y-test.cc  news-y.hpp  page-y-test.cc  page-y.cpp  page-y.hpp  rss-test.cc  rss.cpp  rss.hpp  source.cpp  source.hpp
liboreo-news/testing/: mocks.hpp
